Fix line spacing, especially in examples.
git-svn-id: https://poe.svn.sourceforge.net/svnroot/poe/trunk@2562 742d25e2-4c0f-0410-ba8b-f6b7b6679366

--- a/extras/wiki/global.css
+++ b/extras/wiki/global.css
@@ -11,7 +11,7 @@ Heavily modified for POE's wiki by Rocco Caputo.
 	/* Lucida Grande for the Macs, Tahoma for the PCs */
 	font-family: Lucida Grande, Tahoma, Arial, Helvetica, sans-serif;
 	font-size: 10pt;
-	line-height: 1.6em;
+	line-height: 120%;
 	color: #111111;
 	background-color: #FFF;
 	text-align: left; /* For IE, thanks to Tsz Ming WONG */
@@ -42,6 +42,7 @@ h2 {
 pre {
 	font-size: 8pt;
 	margin-bottom: 0pt;
+	line-height: 100%;
 }
 
 a {
